crates/ars-i18n/tests/ui/translate_unclosed_placeholder.stderr
error: Translate message has malformed placeholder starting at byte 0
 --> tests/ui/translate_unclosed_placeholder.rs:6:22
  |
6 |     #[translate(en = "{count")]
  |                      ^^^^^^^^
